Update RSS feed link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
 <div class="center-content">
 <div class="button large">
-    <a href="http://127.0.0.1:4000/podcast.xml">RSS Feed</a>
+    <a href="{{ site.baseurl }}/podcast.xml">RSS Feed</a>
 </div>
 <div class="button large">
     <a href="https://overcast.fm/itunes1334758155/the-silent-podcast">Overcast</a>
