--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 ---
 layout: default
 ---
-<div class="logo"><img src="{{ site.baseurl }}/images/logo-no-text.png" height="300px"></div>
 <div class="row">
-<div class="ten columns offset-by-one">
-<p>Welcome to <strong>The Silent Podcast</strong>, a 10-minute pocket of stillness in your day.</p>
-<p>Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you.</p>
-<p>I always appreciate your feedback and you can get in touch with me on <a href="http://twitter.com/gabrielkrieshok">Twitter</a>!</p>
+<div class="eight columns offset-by-two">
+    <div class="logo"><img src="/images/logo-no-text.png" height="300px"></div>
+    <h1 style="text-align:center;">The Silent Podcast</h1>
+    <p style="text-align:center;">Welcome to <strong>The Silent Podcast</strong>, a 10-minute pocket of stillness in your day.</p>
+    <p style="text-align:center;">Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you.</p>
+    <p style="text-align:center;">I always appreciate your feedback and you can get in touch with me on <strong><a href="http://twitter.com/gabrielkrieshok">Twitter</a></strong>!</p>
 
-<div class="center-content">
-<div class="button large">
-    <a href="{{ site.baseurl }}/podcast.xml">RSS Feed</a>
+<div style="margin-top: 40px;" class="center-content">
+
+<a href="{{ site.baseurl }}/podcast.xml">
+    <div class="button button-primary large">
+        RSS Feed
+    </div>
+</a>
+
+<a href="https://overcast.fm/itunes1334758155/the-silent-podcast">
+    <div class="button button-primary large">
+        Overcast
+    </div>
+</a>
+
+<a href="https://podcasts.apple.com/us/podcast/the-silent-podcast/id1334758155?mt=2">
+    <div class="button button-primary large">
+        iTunes
+    </div>
+</a>
 </div>
-<div class="button large">
-    <a href="https://overcast.fm/itunes1334758155/the-silent-podcast">Overcast</a>
-</div>
-<div class="button large">
-    <a href="https://podcasts.apple.com/us/podcast/the-silent-podcast/id1334758155?mt=2">iTunes</a>
 </div>
 </div>
-</div>
-</div>
-<div class="card-grid">    
+<!-- <div class="card-grid">    
     
     {% for post in site.posts %}
         <div class="cards">
@@ -31,7 +41,7 @@ layout: default
         </div>
     {% endfor %}
     
-</div>
+</div> -->
 
 <div class="container center-content extra-padding">
 </div>
