Fixing links to http

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <h1 style="text-align:center;">The Silent Podcast</h1>
     <p style="text-align:center;">Welcome to <strong>The Silent Podcast</strong>, a 10-minute pocket of stillness in your day.</p>
     <p style="text-align:center;">Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you.</p>
-    <p style="text-align:center;">I always appreciate your feedback and you can get in touch with me on <strong><a href="http://twitter.com/gabrielkrieshok">Twitter</a></strong>!</p>
+    <p style="text-align:center;">I always appreciate your feedback and you can get in touch with <strong><a href="https://gabrielkrieshok.com">me</a></strong> on <strong><a href="https://twitter.com/gabrielkrieshok">Twitter</a></strong>!</p>
 
 <div style="margin-top: 40px;" class="center-content">
 
