--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <div class="eight columns offset-by-two">
     <div class="logo"><img src="/images/logo-no-text.png" height="300px"></div>
     <h1 style="text-align:center;">The Silent Podcast</h1>
-    <p style="text-align:center;">Welcome to <strong>The Silent Podcast</strong>, a 10-minute pocket of stillness in your day.</p>
-    <p style="text-align:center;">Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you.</p>
+    <p style="text-align:center;">The Silent Podcast is podcast feed that provides a daily 10-minute pocket of stillness in your routine.</p>
+    <p style="text-align:center;">I set this up as a way to remind myself to take a few moments every day, and just be mindful of the world around me — even with headphones on (but no listening at 2x speed!)</p>
     <p style="text-align:center;">I always appreciate your feedback and you can get in touch with <strong><a href="https://gabrielkrieshok.com">me</a></strong> on <strong><a href="https://twitter.com/gabrielkrieshok">Twitter</a></strong>!</p>
 
 <div style="margin-top: 40px;" class="center-content">
