--- a/404.html
+++ b/404.html
@@ -1,24 +1,89 @@
 ---
-layout: default
+
 ---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="canonical" href="https://thesilentpodcast.com/" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ site.title }}</title>
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+    <!-- Meta SEO -->
+    <meta name="title" content="{{ site.title }}">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Gabriel Krieshok">
 
-<div class="container">
-  <h1>404</h1>
+    <!-- Social media share -->
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:site_name" content="{{ site.title }}">
+    <meta property="og:url" content="{{ site.url }}/">
+    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:type" content="">
+    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/images/logo.png" />    
+    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/images/logo.png" />    
+    <meta name="twitter:card" content="{{ site.description }}" />
+    <meta name="twitter:site" content="@gabrielkrieshok" />
+    <meta name="twitter:creator" content="@gabrielkrieshok" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="{{ page.summary }}" />
+    <meta name="twitter:title" content="{{ page.title }}" />
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link href="./output.css" rel="stylesheet">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3MJ8LKLWF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q3MJ8LKLWF');
+</script>
+</head>
+
+<body class="flex flex-col h-screen flex-grow">
+
+    <section class="bg-white dark:bg-gray-900 flex-grow">
+        <div class="grid max-w-screen-xl px-4 pt-20 pb-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 lg:pt-28">
+            <div class="mr-auto place-self-center lg:col-span-7">
+                <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl dark:text-white">The Silent Podcast <br></h1>
+                <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">This podcast feed provides a routine 10-minute pocket of stillness in your day.</p>
+                <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
+                    <a href="https://podcasts.apple.com/us/podcast/the-silent-podcast/id1334758155?mt=2" class="inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-gray-900 border border-gray-200 rounded-lg sm:w-auto hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+                        <img src="images/apple-podcast-logo.svg" alt="Apple Podcast Logo" class="w-4 h-4 mr-2"> Subscribe via Apple Podcasts
+                    </a> 
+                    <a href="podcast.xml" class="inline-flex items-center justify-center w-full px-5 py-3 mb-2 mr-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg sm:w-auto focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                        <img src="images/rss-feed-icon.svg" alt="RSS Feed Icon" class="w-4 h-4 mr-2"> RSS Feed
+                    </a>
+                </div>
+            </div>
+            <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+                <img src="./images/logo-no-text.png" alt="hero image">
+            </div>                
+        </div>
+    </section>
+
+    <footer class="bg-white dark:bg-gray-800">
+        <div class="max-w-screen-xl p-4 mx-auto lg:py-16 md:p-8 lg:p-10">
+            <div class="text-center">
+                <span class="block text-md text-center text-gray-500 dark:text-gray-400">A project from <a href="https://gabrielkrieshok.com" class="hover:underline font-bold">Gabriel Krieshok</a> | 2024</span>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
+</html>
