--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
----
-
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,30 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ site.title }}</title>
+    <title>The Silent Podcast</title>
 
     <!-- Meta SEO -->
-    <meta name="title" content="{{ site.title }}">
-    <meta name="description" content="{{ site.description }}">
+    <meta name="title" content="The Silent Podcast">
+    <meta name="description" content="The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you.">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="Gabriel Krieshok">
 
     <!-- Social media share -->
-    <meta property="og:title" content="{{ site.title }}">
-    <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:url" content="{{ site.url }}/">
-    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:title" content="The Silent Podcast">
+    <meta property="og:site_name" content="The Silent Podcast">
+    <meta property="og:url" content="http://localhost:4000/">
+    <meta property="og:description" content="The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you.">
     <meta property="og:type" content="">
-    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/images/logo.png" />    
-    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/images/logo.png" />    
-    <meta name="twitter:card" content="{{ site.description }}" />
+    <meta property="og:image" content="http://localhost:4000/images/logo.png" />    
+    <meta name="twitter:image" content="http://localhost:4000/images/logo.png" />    
+    <meta name="twitter:card" content="The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you." />
     <meta name="twitter:site" content="@gabrielkrieshok" />
     <meta name="twitter:creator" content="@gabrielkrieshok" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="{{ page.summary }}" />
-    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="" />
+    <meta name="twitter:title" content="" />
 
 
     <!-- Favicon -->
